fix(ai-agent-rag): missing instructions & updated readme. Added pdf parser

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DATABASE_URL=postgres://postgres:postgres@localhost:5432
 DATABASE_NAME=agent_ollama
 DATA_DIRECTORY=./resources/knowledge
-CHUNK_SIZE=50
+CHUNK_SIZE=100
 CHUNK_SPLIT=/+s/g
-AI_MODEL=llama3.1
+AI_MODEL=agent-rag-model
 AI_ALIVE=60s
