--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "allowJs": true,
+    "checkJs": false,
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
